// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchActions backgroundFetchMessages message fetch success action is dispatched after successful fetch 1`] = `
Array [
  Object {
    "anchor": 1,
    "messages": Array [
      Object {
        "id": 1,
      },
      Object {
        "id": 2,
      },
      Object {
        "id": 3,
      },
    ],
    "narrow": Array [],
    "numAfter": 1,
    "numBefore": 1,
    "replaceExisting": false,
    "type": "MESSAGE_FETCH_COMPLETE",
  },
]
`;

exports[`fetchActions fetchMessages when messages to be fetched both before and after anchor, fetchingOlder and fetchingNewer is true 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 1,
    "numBefore": 1,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchMessages when no messages to be fetched after the anchor, fetchingNewer is false 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": -1,
    "numBefore": 1,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchMessages when no messages to be fetched before the anchor, fetchingOlder is false 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 1,
    "numBefore": -1,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchMessagesAtFirstUnread message fetch start action is dispatched with fetchingOlder and fetchingNewer true 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 0,
    "numBefore": 20,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchNewer message fetch start action is dispatched with fetchingNewer true 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 20,
    "numBefore": 0,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchNewer when caughtUp newer is true, no action is dispatched 1`] = `Array []`;

exports[`fetchActions fetchNewer when fetching.newer is true, no action is dispatched 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 20,
    "numBefore": 0,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchNewer when needsInitialFetch is true, no action is dispatched 1`] = `Array []`;

exports[`fetchActions fetchOlder message fetch start action is dispatched with fetchingOlder true 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 0,
    "numBefore": 20,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchOlder when caughtUp older is true, no action is dispatched 1`] = `Array []`;

exports[`fetchActions fetchOlder when fetchingOlder older is true, no action is dispatched 1`] = `
Array [
  Object {
    "narrow": Array [],
    "numAfter": 0,
    "numBefore": 20,
    "type": "MESSAGE_FETCH_START",
  },
]
`;

exports[`fetchActions fetchOlder when needsInitialFetch is true, no action is dispatched 1`] = `Array []`;
